experiments/wandb/run-20210827_163209-2i0terww/files/output.log
Traceback (most recent call last):
  File "wandb_example.py", line 20, in <module>
    from wandb_runner import WandBRunner
  File "/home/joaoguilhermearujo/rainbow_extend/revisiting_rainbow/wandb_runner.py", line 48
    'Train/AverageStepsPerSecond': average_steps_per_second, 'Eval/NumEpisodes': num_episodes_eval
                                ^
SyntaxError: invalid syntax